--- a/Notes de cours/Cmd Advanced.yml
+++ b/Notes de cours/Cmd Advanced.yml
@@ -1,6 +1,8 @@
 Commandes avancées : 
-Clone
-Config
-Tag
-Blame
-
+    Tag         : Marque un commit significatif
+    Grep        : Fait une recherche
+    Blame       : Permet de voir qui a modifié chaque partie du Code
+    Cherry-pick : Permet de choisir les changements un a un
+    Revert      : Retourne un commit a sa version precedente (Ce n'est pas une annulation)
+    Bisect      : Recherche binaire qui permet de trouver quand un bug a été introduit
+    Apply       : Applique un patch sur les fichiers
